@@ -55,6 +55,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 23276) Add hook to Special:NewPages to modify query
 * Add accesskey 's' and tooltip to 'Save' button at Special:Preferences
 * (bug 20186) Allow filtering Special:Contributions for RevisionDeleted edits
+* (bug 22858) $wgLocalStylePath is by default set to the same value as
+  $wgStylePath but should never point to a different domain than the site is
+  on, allowing skins to use .htc files which are not cross-domain friendly.
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
